--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>April D. Ross</h1>
-    <p>I'm from Chattanooga, Tennessee. Before I came to the Iron Yard, I worked as an analyst at a government owned utility. I came to the Iron Yard to learn to be a back-end developer.</p>
+    <p>I'm from Chattanooga, Tennessee. Before I came to the Iron Yard, I worked as an analyst at a government owned utility. I came to the Iron Yard to learn to be a back-end developer. I've enjoyed learning the front-end.</p>
 
   </body>
 </html>
