--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <body>
     <h1>April D. Ross</h1>
     <p>I'm from Chattanooga, Tennessee. Before I came to the Iron Yard, I worked as an analyst at a government owned utility. I came to the Iron Yard to learn to be a back-end developer. I've enjoyed learning the front-end.</p>
+    <h3>Programming Languages:</h3>
+    <p>Javascript, Java, Workforce</p>
+    <a href = "https://github.com/AprilDRoss" target ="-_blank">My Github Profile</a>
 
   </body>
 </html>
